--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .main{
-    background-image: url("./assets/Background.png");
+    background-image: url("/assets/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
